--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,41 +4,46 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>AllTestCases.TC_05_create_camp_deleteCamp_Test</td>
+<td>AllTestCases.TC_01_Select_particular_rowTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>example</td>
-<td>&nbsp;</td></tr>
+<td>main1</td>
+<td>Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>launchBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logionAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logoutAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 </table>
