--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>TC_01_Select_particular_rowTest.main1()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]<br/></td></tr>
+</table>
