--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,36 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:23:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:23:05</td>   <td>267</td> <td title="&lt;&lt;BaseClass.closeConnectToDB()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&lt;&lt;closeConnectToDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:22:10</td>   <td>-54620</td> <td title="&gt;&gt;BaseClass.connectToDB()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&gt;&gt;connectToDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:22:10</td>   <td>-54588</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:22:17</td>   <td>-48216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.logionAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&gt;&gt;logionAppln</td> 
-<td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:22:29</td>   <td>-35502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.logionAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&gt;&gt;logionAppln</td> 
-<td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:22:40</td>   <td>-24437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.logionAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&gt;&gt;logionAppln</td> 
-<td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:22:53</td>   <td>-12168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.logionAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&gt;&gt;logionAppln</td> 
-<td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:22:28</td>   <td>-37080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&lt;&lt;logoutAppln</td> 
-<td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:22:39</td>   <td>-26215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&lt;&lt;logoutAppln</td> 
-<td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:22:51</td>   <td>-14038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&lt;&lt;logoutAppln</td> 
-<td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/28 18:23:03</td>   <td>-1902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">&lt;&lt;logoutAppln</td> 
-<td>&nbsp;</td>  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="72b167">  <td>22/07/28 18:22:21</td>   <td>-44077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_Select_particular_rowTest.main1()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">main1</td> 
-  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="72b167">  <td>22/07/28 18:22:32</td>   <td>-32415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_Select_particular_rowTest.main1()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">main1</td> 
-  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="72b167">  <td>22/07/28 18:22:44</td>   <td>-20964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_Select_particular_rowTest.main1()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">main1</td> 
-  <td>main@1573605215</td>   <td></td> </tr>
-<tr bgcolor="72b167">  <td>22/07/28 18:22:56</td>   <td>-8715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_Select_particular_rowTest.main1()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@6f63b475]">main1</td> 
-  <td>main@1573605215</td>   <td></td> </tr>
+<tr bgcolor="dec760">  <td>22/07/29 18:13:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_create_compare_ContactTest.abcd()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">abcd</td> 
+  <td>main@711112124</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/07/29 18:13:57</td>   <td>18822</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/07/29 18:13:57</td>   <td>18933</td> <td title="&lt;&lt;BaseClass.closeConnectToDB()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&lt;&lt;closeConnectToDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/07/29 18:13:31</td>   <td>-6927</td> <td title="&gt;&gt;BaseClass.connectToDB()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&gt;&gt;connectToDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/07/29 18:13:31</td>   <td>-6904</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/07/29 18:13:35</td>   <td>-2414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.logionAppln()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&gt;&gt;logionAppln</td> 
+<td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/07/29 18:13:55</td>   <td>17474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutAppln()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&lt;&lt;logoutAppln</td> 
+<td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
 </table>
